src/shared/ui/Submenu/Submenu.module.scss
.Submenu {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  display: flex;
  opacity: 0;
  pointer-events: none;
}

.overlay {
  width: 100%;
  width: 100%;
}

.content {
  position: absolute;
  top: 47px;
  right: 10px;
  width: 277px;
  height: fit-content;
  background: var(--submenu-bg);
  border-radius: 16px;
  box-shadow: 0 0 15px var(--submenu-shadow), 0 0 0 1px var(--submenu-border);
  transform-origin: 257px 0px;
  transform: scale(0.5);
  opacity: 0;
  overflow: hidden;
  color: var(--main-text-color);
  user-select: none;
  &.showTriangle {
    overflow: visible;
  }
}

.opened {
  pointer-events: all;
  z-index: var(--modal-z-index);
  opacity: 1;
  & .content {
    transform: scale(1);
    opacity: 1;
    transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275),
      opacity 0.2s;
  }
}
.isClosing {
  & .content {
    opacity: 0;
    transition: opacity 0.2s;
  }
}

.closeBtn {
  position: absolute;
  visibility: hidden;
  border: none;
}

.account {
  .content {
    width: 245px;
    transform-origin: 223px 0px;
    right: 53px;
  }
}

.notifications {
  .content {
    right: 100px;
  }
}

.sort-by {
  .content {
    width: 200px;
    transform-origin: 100px 0px;
    right: 11px;
    top: 142px;
    border-radius: 6px;
  }
  .triangle {
    left: 120px;
    &.ru {
      left: 90px;
    }
    &.uk {
      left: 90px;
    }
  }
}
.triangle {
  position: absolute;
  top: -13px;
  fill: var(--submenu-bg);
  stroke: var(--submenu-triangle-stroke);
}
.category {
  .content {
    width: 200px;
    transform-origin: 0px 0px;
    left: 11px;
    top: 142px;
    border-radius: 6px;
  }
  .triangle {
    right: 120px;
  }
}
.sidebarPadding {
  & .content {
    left: 262px;
  }
}
.page-switcher {
  .content {
    width: 200px;
    transform-origin: 0px 0px;
    left: 11px;
    top: 102px;
    border-radius: 6px;
  }
  .triangle {
    right: 150px;
  }
}

@media screen and (max-width: 500px) {
  .category {
    .content {
      top: 170px;
    }
  }
  .sort-by {
    .content {
      top: 170px;
    }
  }
}

